--- a/src/app/appareil-view/appareil-view.component.html
+++ b/src/app/appareil-view/appareil-view.component.html
@@ -5,6 +5,7 @@
               [indexOfAppareil] = "i"
               [appareilName] = "appareil.name"
               [appareilStatus] = "appareil.status"
+              [id] = "appareil.id"
      >
      </app-appareil>
   </ul>
