--- a/src/app/appareil/appareil.component.html
+++ b/src/app/appareil/appareil.component.html
@@ -3,8 +3,7 @@
                 'list-group-item-danger': appareilStatus === 'éteint'}">
 
   <h4 [ngStyle]="{color: getColor()}">Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
-  <input type="text" class="form-control" [(ngModel)]="appareilName">
-
+  <a [routerLink] = "[id]">Détail</a>
   <button class="btn btn-sm btn-success"
           *ngIf="appareilStatus === 'éteint'"
           (click)="onSwitch()">Allumer</button>
