--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
       <ul class = "nav navbar-nav">
          <li routerLinkActive="active"><a routerLink ="auth">Authentification</a></li>
          <li routerLinkActive="active"><a routerLink ="appareils">Appareils</a></li>
+         <li routerLinkActive="active"><a routerLink ="edit">Nouvel appareil</a></li>
       </ul>
+      <div class = "navbar-right">
+         <p>Vous êtes connecté depuis {{seconds}} seconds.</p>
+      </div>
    </div>
 </nav>
 <div style="text-align:center">
