--- a/src/app/edit-appareil/edit-appareil.component.html
+++ b/src/app/edit-appareil/edit-appareil.component.html
@@ -5,14 +5,14 @@
             <label for="name">
                Nom de l'appareil
             </label>
-            <input type = "text" id="name" class="form-control" name="name" ngModule required>
+            <input type = "text" id="name" class="form-control" name="name" ngModel required>
          </div>
 
          <div class="form-group">
             <label for="status">
                État de l'appareil
             </label>
-            <select id="status" class="form-control" name="status">
+            <select id="status" class="form-control" name="status" [ngModel]="defaultOnOff">
                <option value="allumé">Allumé</option>
                <option value="éteint">Éteint</option>
             </select>
