--- a/src/app/post-list-component/post-list-component.component.html
+++ b/src/app/post-list-component/post-list-component.component.html
@@ -1,6 +1,14 @@
+<h2>Posts</h2>
 <app-post-list-item-component *ngFor = 'let post of postArr'
       [postTitle]='post.title'
       [postContent] = 'post.content'
       [postLoveIts] = 'post.loveIts'
-      [postCreation] = 'post.created_at'>
+      [postCreation] = 'post.created_at'
+      [postId] = 'post.id'
+   >
 </app-post-list-item-component>
+<button class ="btn btn-primary" (click)="onSave()">Enregistrer</button>
+<button class ="btn btn-primary" (click)="onFetch()">Charger</button>
+<button class="btn btn-success pull-right" (click)="onAddPost()">
+    Ajouter un post
+</button>
