--- a/src/app/post-list-item-component/post-list-item-component.component.html
+++ b/src/app/post-list-item-component/post-list-item-component.component.html
@@ -5,10 +5,13 @@
 }">
    <div>
      <h1>{{postTitle}}</h1>
-     <p>Content:{{postContent}}</p>
+     <p>Content:{{postContent}}
+        <button class="btn btn-default pull-right" (click)="onDeletePost(postId)">
+           Supprimer post
+        </button>
+     </p>
        <button type ="button" class ="btn btn-success" (click) = "increase()">Love it</button>
        <button type="button" class="btn btn-danger" (click) = "decrease()">Don't love it</button>
      <p style="position:absolute;top:10px;right:10px;">{{postCreation | date:'short'}}</p>
-     <!-- <p>LoveIts: {{postLoveIts}}</p> -->
    </div>
 </li>
