--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,4 @@
-<nav class = "navbar navbar-default">
-   <div class = "container-fluid">
-      <ul class = "nav navbar-nav">
-         <li routerLinkActive="active"><a routerLink ="auth">Authentification</a></li>
-         <li routerLinkActive="active"><a routerLink ="posts">Posts</a></li>
-         <li routerLinkActive="active"><a routerLink ="new">Nouveau Post</a></li>
-      </ul>
-      <div class = "navbar-right">
-         <ul class="nav navbar-nav navbar-right">
-         <!--
-            <li routerLinkActive="active" *ngIf="!isAuth">
-               <a routerLink="auth/signup">Create an account</a>
-            </li>
-            <li routerLinkActive="active" *ngIf="!isAuth">
-               <a routerLink="auth/signin">Connexion</a>
-            </li>
-         -->
-         <li>
-            <a (click)="onSignOut()" style="cursor:pointer" *ngIf="isAuth">Déconnexion</a>
-         </li>
-         </ul>
-      </div>
-   </div>
-</nav>
-
+<app-header></app-header>
 <div class="container">
-  <div class="row">
-      <router-outlet></router-outlet>
-  </div>
+   <router-outlet></router-outlet>
 </div>
