--- a/src/app/post-list-item-component/post-list-item-component.component.html
+++ b/src/app/post-list-item-component/post-list-item-component.component.html
@@ -1,7 +1,7 @@
 <li [ngClass]="{
 'list-group-item':true,
-'list-group-item-success':postLoveIts>0,
-'list-group-item-danger':postLoveIts<=0
+'list-group-item-success':postLoveIts>=0,
+'list-group-item-danger':postLoveIts<0
 }">
    <div>
      <h1>{{postTitle}}</h1>
@@ -10,8 +10,8 @@
            Supprimer post
         </button>
      </p>
-       <button type ="button" class ="btn btn-success" (click) = "increase()">Love it</button>
-       <button type="button" class="btn btn-danger" (click) = "decrease()">Don't love it</button>
+       <button type ="button" class ="btn btn-success" (click) = "increase(postId)">Love it</button>
+       <button type="button" class="btn btn-danger" (click) = "decrease(postId)">Don't love it</button>
      <p style="position:absolute;top:10px;right:10px;">{{postCreation | date:'short'}}</p>
    </div>
 </li>
